// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-text Renders with all props provided 1`] = `
<form-control-text exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="email" part="label">
      Email
    </label>
    <input class="form-control is-invalid" disabled="" id="email" maxlength="50" name="email" part="input input-invalid " type="text" value="user@example.com">
    <small class="form-text text-muted" id="form-help-text-email" part="input-help-text">
      Enter your email
    </small>
    <small class="form-text text-danger" id="form-error-text-email" part="input-error-text">
      Invalid email
    </small>
  </div>
</form-control-text>
`;

exports[`form-control-text Renders with default props 1`] = `
<form-control-text exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="username" part="label">
      Username
    </label>
    <input class="form-control" id="username" name="username" part="input " type="text" value="">
  </div>
</form-control-text>
`;
